@@ -20,6 +20,8 @@ Bug Handling
 
 * Force ElasticSearch index name to lower case, as required by ElasticSearch.
 
+* Fixed default buffer config values.
+
 0.10.0b1 (2015-08-07)
 =====================
 
